@@ -1,3 +1,13 @@
+2019-08-22  Justin Michaud  <justin_michaud@apple.com>
+
+        Add missing exception check in canonicalizeLocaleList
+        https://bugs.webkit.org/show_bug.cgi?id=201021
+
+        Reviewed by Mark Lam.
+
+        * stress/missing-exception-check-in-canonicalizeLocaleList.js: Added.
+        (catch):
+
 2019-08-21  Mark Lam  <mark.lam@apple.com>
 
         Wasm::FunctionParser is failing to enforce maxFunctionLocals.
